--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         </div>
 
         <!-- Download Button -->
-        <h3><a href="/Users/nikolajslozko/Desktop/Projects 2023/Personal/NikolajsLozkoCV copy.pdf" class="btn-custom" download="NikolajsLozkoCV copy.pdf">Download Full Resume</a></h3>
+        <h3><a href="https://www.dropbox.com/scl/fi/98ddw9a59qtdu7cvs88z7/NikolajsLozkoCV-copy.pdf?rlkey=ua0f2qf8c8ad5ejf7row88qrm&dl=0" class="btn-custom" download="NikolajsLozkoCV copy.pdf">Download Full Resume</a></h3>
     </div>
 
     <style>
