fix to image path

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 
              <div class="col-lg-4 col-md-6 portfolio-item filter-web">
       <div class="portfolio-wrap">
-          <img src="/Users/nikolajslozko/Desktop/Projects 2023/Personal/assets/img/wallpaperflare.com_wallpaper (3).jpg" class="img-fluid portfolio-image" alt="">
+          <img src="assets/img/wallpaperflare.com_wallpaper (3).jpg" class="img-fluid portfolio-image" alt="">
           <div class="portfolio-info">
               <h4>Coming Soon</h4>
               <p>More will be uploaded</p>
