--- a/index.html
+++ b/index.html
@@ -498,7 +498,10 @@
                         <h4>Community cloud for knowledge/skill sharing</h4>
                         <p>Full-Stack App with Cloud Services</p>
                         <div class="portfolio-links">
-                            <a href="assets/img/fyphome.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Description..."><i class="bx bx-plus"></i></a>
+                            <a href="assets/img/fyphome.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="YoungDeveloperHub is a cloud-based platform designed to aid students in honing both technical and non-technical skills, including programming and teamwork. 
+                            The platform provides a rich learning environment with diverse resources like interactive exercises, lessons, and job opportunities, all contributed by peers in their respective fields. It features a personalized dashboard, a social community for interaction, and a mechanism to 
+                            suggest topics to the admin. Addressing the limitations of traditional learning and the abundance of irrelevant online content, YoungDeveloperHub uses cloud technology for vast storage, real-time data processing, and enhanced collaboration capabilities. This ensures students worldwide 
+                            receive a tailored, comprehensive learning experience in a secure setting, fostering their growth as learners and developers."><i class="bx bx-plus"></i></a>
                             <a href="https://www.dropbox.com/scl/fi/bh1xadxbj7hylzryf4v8b/Community_cloud_for_knowledge_and_skill_sharing-copy.pdf?rlkey=1whec8nocac3tsn2cn43t1m00&dl=0" class="btn-custom" download="YourDocumentName.pdf">Download PDF</a>
                         </div>
                     </div>
@@ -512,7 +515,8 @@
                         <h4>Cryptocurrency Management System</h4>
                         <p>Team Software Project</p>
                         <div class="portfolio-links">
-                            <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                            <a href="assets/img/crypto.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Over recent decades, technology-driven markets like cryptocurrency have emerged and expanded significantly. Since its 2009 inception, over 14 million Bitcoins circulate today. Platforms like Binance and Coinbase simplify cryptocurrency transactions for various stakeholders, including merchants, consumers, developers, investors, financial institutions, and regulators. This document will discuss the rising interest in cryptocurrency and the project's objective: to design a user-friendly system to navigate and manage digital currencies, facilitate transactions, and introduce the concept of Non-Fungible Tokens (NFTs). Regenerate
+                            "><i class="bx bx-plus"></i></a>
                             <a href="https://www.dropbox.com/scl/fi/zp76zkl1ifbctbuefi0pn/annotated-CS3305-Team7-D1-1.docx.pdf?rlkey=yndfsc15077rmntejdzrjl7ti&dl=0" class="btn-custom" download="YourWeb3DocumentName.pdf">Download PDF</a>
                         </div>
                     </div>
