--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </div>
 
         <!-- Download Button -->
-        <h3><a href="https://www.dropbox.com/scl/fi/rd79kk9ujcyec5srpa9qh/NikolajsLozkoCV1.pdf?rlkey=7en4ixsuc2riris5qu1t435yu&st=yy9zxxwi&dl=0" class="btn-custom" download="NikolajsLozkoCV1.pdf">Download Full Resume</a></h3>
+        <h3><a href="https://www.dropbox.com/scl/fi/ov0865ppufhsha6tshrwj/Nikolajs_Lozko_CV_Resume.pdf?rlkey=746axa522554uf3wlevo8n6eb&st=cvwcim0u&dl=0" class="btn-custom" download="Nikolajs_Lozko_CV_Resume.pdf">Download Full Resume</a></h3>
     </div>
 
     <style>
