--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </div>
 
         <!-- Download Button -->
-        <h3><a href="https://www.dropbox.com/scl/fi/bakjxj5d66c0l4brfwcbe/Nikolajs_Lozko_CV_Resume-1.pdf?rlkey=rtucibld2b04d3leb5cifk0m4&st=nuo9t4b3&dl=0" class="btn-custom" download="Nikolajs_Lozko_CV_Resume-1.pdf">Download Full Resume</a></h3>
+        <h3><a href="https://www.dropbox.com/scl/fi/wncbuqyq09xk54d242joi/Nikolajs_Lozko_CV_2025.pdf?rlkey=rfd7cs65erazcvtvg240pou1j&st=g891oqpo&dl=0" class="btn-custom" download="Nikolajs_Lozko_CV_2025.pdf">Download Full Resume</a></h3>
     </div>
 
     <style>
